--- a/admin/templates/base.html
+++ b/admin/templates/base.html
@@ -57,7 +57,7 @@
                   </div>
                 </div>
                 <div class="span6">
-                  <div id="ml-auth-bar">
+                  <div id="cc-auth-bar">
                     {% block authbar %}{% endblock authbar %}
                   </div>
                 </div>
