--- a/admin/certchain/templates/certchain/overview.html
+++ b/admin/certchain/templates/certchain/overview.html
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="span12">
       <h2>Network Trust States</h2>
-      <p>The institutions below have been registered on the network, and are accompanied by a list of the institutions that trust them. An institution must maintain the trust of at least 75% of its peer institutions in order to perform certifications and revocations on the network.</p>
+      <p>The institutions below have been registered on the network, and are accompanied by a list of those that trust them. In order to perform certifications and revocations on the network, an institution must maintain the trust of at least 75% of those peer institutions that are themselves trusted by at least one other institution.</p>
     </div>
   </div>
 
@@ -24,11 +24,11 @@
     </div>
   </div>
 
-  {% for inst_addr, inst_trusting_addrs in trust_list %}
+  {% for inst_addr, inst_trusting_addrs, trust_ratio in trust_list %}
   <div class="row cc-inst-trust-row">
     <div class="span8">
       <h3>{{ inst_addr | cc_addr_to_name }}</h3>
-      <h4>TRUSTED</h4>
+      <span class="{{ trust_ratio | cc_trust_ratio_class }}">{{ trust_ratio | cc_trust_ratio }}</span>
       <ul>
         {% for trusting_addr in inst_trusting_addrs %}
           <li>{{ trusting_addr | cc_addr_to_name }} ({{ trusting_addr }})</li>
