--- a/admin/templates/registration/login.html
+++ b/admin/templates/registration/login.html
@@ -6,7 +6,7 @@
     <div class="span12">
         <div id="cc-login">
             <p>Access to the administrative interface for
-            Stanford University's CertChain node is restricted
+            this institution's CertChain node is restricted
             to authorized users. Please enter your credentials below.</p>
 
             {% if form.errors %}
