Adding document viewer.

--- a/admin/certchain/templates/certchain/diplomas.html
+++ b/admin/certchain/templates/certchain/diplomas.html
@@ -63,7 +63,7 @@
           <th></th>
         </tr>
         <tr>
-          <td><a href="">a45fcdef</a></td>
+          <td><a href="{% url 'viewer' %}">a45fcdef</a></td>
           <td>Aaron Yates</td>
           <td>PhD, Chemistry</td>
           <td>April 10, 2015</td>
