--- a/admin/certchain/templates/certchain/viewer.html
+++ b/admin/certchain/templates/certchain/viewer.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load certchain_extras %}
 
 <html>
   <head>
@@ -8,54 +9,18 @@
   </head>
   <body>
     <div id="document">
-      <div id="cert-area" class="in-progress">
-        <span id="cert-status">Verification in progress...</span>
+      <div id="cert-area" class="{{ msg_class }}">
+        <span id="cert-status">{{ msg }}</span>
         <br/>
-        <span id="cert-details" class="hidden">The public record of this certification is available for viewing at <a href="https://www.blocktrail.com/tBTC/tx/{{ txn_id }}">{{ txn_id }}.</a></span>
+        {% if latest_txn_id %}
+        <span id="cert-details">The underlying transaction data is publicly available at <a href="">{{ latest_txn_id }}.</a></span>
+        {% endif %}
       </div>
       <div id="document-body">
-        <span id="label-line1">{{ label_line1 }}</span>
-        <span id="label-line2">{{ label_line2 }}</span>
-        <span id="label-line3">{{ label_line3 }}</span>
+        <span id="label-line1">{{ doc | cc_extract_recipient }}</span>
+        <span id="label-line2">{{ doc | cc_extract_degree }}</span>
+        <span id="label-line3">Conferred on {{ doc | cc_extract_conferral_date }}</span>
       </div>
     </div>
-
-    <script src="{% static 'certchain/js/jquery-1.10.2.min.js' %}"></script>
-    <script type="text/javascript">
-      $(document).ready(function(){
-
-        window.verifyCertification = function(txn_id, document_hash) {
-          $.ajax({
-            method: 'GET',
-            dataType: 'json',
-            url: '/auth/locker/verify_certification',
-            data: {
-              'txnId' : txn_id,
-              'documentHash' : document_hash
-            },
-            success: function(response) {
-              $('#cert-area').removeClass('in-progress');
-              $('#cert-status').text(response.statusMsg);
-              
-              if (response.statusCode == 'VALID') {
-                $('#cert-details').removeClass('hidden');
-                $('#cert-area').addClass('valid');
-              } else if (response.statusCode == 'PENDING') {
-                $('#cert-details').addClass('hidden');
-                $('#cert-area').addClass('pending');
-              } else {
-                $('#cert-details').addClass('hidden');
-                $('#cert-area').addClass('invalid');
-              }
-            },
-            error: function(xhr, error) {
-              alert(error);
-            }
-          });
-        };
-
-        window.verifyCertification('{{ txn_id }}', '{{ document_hash }}')
-      });
-    </script>
   </body>
 </html>
