Tampered diplomas should simply say INVALID, rather than attempting to render the tampered data.

--- a/admin/certchain/templates/certchain/viewer.html
+++ b/admin/certchain/templates/certchain/viewer.html
@@ -17,9 +17,13 @@
         {% endif %}
       </div>
       <div id="document-body">
+        {% if document_override %}
+        <span id="label-line1">INVALID</span>
+        {% else %}
         <span id="label-line1">{{ doc | cc_extract_recipient }}</span>
         <span id="label-line2">{{ doc | cc_extract_degree }}</span>
         <span id="label-line3">Conferred on {{ doc | cc_extract_conferral_date }}</span>
+        {% endif %}
       </div>
     </div>
   </body>
