Only request identity confirmation once, regardless of how many times a socket needs to be recreated for a peer.

--- a/admin/certchain/templates/certchain/overview.html
+++ b/admin/certchain/templates/certchain/overview.html
@@ -59,6 +59,8 @@
       <strong>Port</strong>: {{ peer.port }}
       <br/>
       <strong>Connection State</strong>: {{ peer.conn_state }}
+      <br/>
+      <strong>Identity State</strong>: {{ peer.ident_state }}
     </div>
   </div>
   {% empty %}
