--- a/admin/static/css/certchain.css
+++ b/admin/static/css/certchain.css
@@ -165,6 +165,34 @@ img#stf-brand {
 	background-image: linear-gradient(top, #eee, #e0e0e0);
 }
 
+.cc-btn.green {
+	color: black;
+	border: 1px solid #1AA626;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#99e87a+0,81cc59+100 */
+	background: #99e87a; /* Old browsers */
+	background: -moz-linear-gradient(top, #99e87a 0%, #81cc59 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#99e87a), color-stop(100%,#81cc59)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #99e87a 0%,#81cc59 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #99e87a 0%,#81cc59 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #99e87a 0%,#81cc59 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #99e87a 0%,#81cc59 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99e87a', endColorstr='#81cc59',GradientType=0 ); /* IE6-9 */
+}
+
+.cc-btn.red {
+	color: black;
+	border: 1px solid #A61A1A;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff8a7f+0,db6464+100 */
+	background: #ff8a7f; /* Old browsers */
+	background: -moz-linear-gradient(top, #ff8a7f 0%, #db6464 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff8a7f), color-stop(100%,#db6464)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #ff8a7f 0%,#db6464 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #ff8a7f 0%,#db6464 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #ff8a7f 0%,#db6464 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #ff8a7f 0%,#db6464 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8a7f', endColorstr='#db6464',GradientType=0 ); /* IE6-9 */
+}
+
 ul#cc-messages {
 	list-style-type: none;
 	font-size: 1.1em;
